--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,16 @@
 root = true
 
 [*]
+charset = utf-8
+end_of_line = lf
+insert_final_newline = true
+indent_size = 4
 indent_style = space
+trim_trailing_whitespace = true
+
+[*.{html,js,json}]
 indent_size = 2
+
+[*.md]
+insert_final_newline = false
+trim_trailing_whitespace = false
